JG-2011-03-23-1: Cleanup:     removed the reporting code (Web-Console)                  Issue:       AR-1                  Review:      DG